# mediapipe-custom-hand-guesture-recogniser

./: .envrc.linkme  .gitignore  Makefile  NOTES.md  app.py  keypoint_classification.ipynb  poetry.toml  pyproject.toml  shell.nix  train.py
mediapipe_gesture_classifier/: __init__.py  gesture_classifier.py  gesture_classifier.tflite
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
models/: __init__.py
models/gesture_classifier/: __init__.py  gesture_classifier.hdf5  gesture_classifier.py  gesture_classifier.tflite  training_data.csv
