[tool.poetry]
name = "mediapipe-custom-hand-guesture-recogniser"
version = "0.1.0"
description = "Custom hand guesture recognition using mediapipe"
authors = ["Kazuhito Takahashi", "Zaar Hai <hello@zaar.me>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.10.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
uberlogging = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
