[tool.poetry]
name = "mediapipe-custom-hand-guesture-recogniser"
version = "0.1.0"
description = "Custom hand guesture recognition using mediapipe"
license = "Apache 2.0"
readme = "README.md"
authors = [
  "Kazuhito Takahashi",
  "Matthias Baetens <matthias@doit.com>",
]
packages = [
  { include = "mediapipe_gesture_classifier" },
]
exclude = [
  "mediapipe_gesture_classifier/*.csv",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = {version = "2.13.0", platform = "darwin"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
uberlogging = "^0.7.0"
mediapipe = "=0.10.9"  # has to be this version for darwin!

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
